// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages Component Test Suite Messages renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count"
  >
    4
  </div>
</div>
`;

exports[`Messages Component Test Suite Messages renders the UI as expected with zero unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`Messages renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count"
  >
    4
  </div>
</div>
`;

exports[`Messages renders the UI as expected with zero unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
